fixed alignment issue with feature component

--- a/mympy-app/src/components/feature/feature.scss
+++ b/mympy-app/src/components/feature/feature.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     align-content: center;
     margin-bottom: 2%;
-    height: auto;
+    // height: auto;
 
     .wrapper {
         width: 90%;
@@ -33,7 +33,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     border-radius: 20px;
-    height: 100%;
+    // height: 100%;
 
     .single {
         width: 30%;
